@@ -1,14 +1,0 @@
-If you want to use the gnutls library in other projects
-using autoconf/aclocal, put in your 
-
-aclocal.m4:
- include(libtasn1.m4)
-
-configure.in:
- AM_PATH_LIBTASN1( 0.2.10,, AC_MSG_ERROR([[
-***
-*** libtasn1 was not found. You may want to get it from
-*** ftp://ftp.gnutls.org/pub/gnutls/libtasn1/
-]]))
-
-these macros define LIBTASN1_LIBS and LIBTASN1_CFLAGS. 
